Moving SVG elements on the page doesn't always erase element at the old position https://bugs.webkit.org/show_bug.cgi?id=74002

Patch by Florin Malita <fmalita@google.com> on 2011-12-08
Reviewed by Darin Adler.

Source/WebCore:

Test: svg/repaint/container-repaint.svg

* rendering/svg/RenderSVGContainer.cpp:
(WebCore::RenderSVGContainer::layout):
Save the old repaint bounds before updating the viewport.

LayoutTests:

* svg/repaint/container-repaint-expected.png: Added.
* svg/repaint/container-repaint-expected.txt: Added.
* svg/repaint/container-repaint.svg: Added.

Canonical link: https://commits.webkit.org/90796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102391 268f45cc-cd09-0410-ab3c-d52691b4dbfc